--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <title>Document</title>
 </head>
 <body>
-  <audio class="audio" src="/assets/audio/Sezairi - It's You.mp3" autoplay type="audio"
+  <audio class="audio" src="Sezairi - It's You.mp3" autoplay type="audio"
     loop=""></audio>
   <div class="body">
     <div id="waktu">
@@ -20,7 +20,7 @@
     <div class="messege-box messege-box1 kelip">
       <div class="notif-wa">
         <div class="left-header">
-          <img src="/assets/img/wa.png" />
+          <img src="/wa.png" />
           <p>TELEGRAM</p>
         </div>
         <div class="right-header">
@@ -40,7 +40,7 @@
     <div class="messege-box messege-box2 kelip">
       <div class="notif-wa">
         <div class="left-header">
-          <img src="/assets/img/wa.png" />
+          <img src="/wa.png" />
           <p>TELEGRAM</p>
         </div>
         <div class="right-header">
