--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="/assets/style/style.css">
-  <title>Document</title>
+  <link rel="stylesheet" href="/style.css">
+  <title>untukmu</title>
 </head>
 <body>
   <audio class="audio" src="Sezairi - It's You.mp3" autoplay type="audio"
@@ -65,7 +65,7 @@
     </div>
   </div>
   <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-  <script src="/assets/js/waktuIndo.js"></script>
-  <script src="/assets/js/script.js"></script>
+  <script src="/waktuIndo.js"></script>
+  <script src="/script.js"></script>
 </body>
 </html>
